--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
-    "mongoose": "^6.5.4"
+    "mongoose": "^6.5.4",
+    "socket.io": "^4.5.2"
   }
 }
